fix layout bug

--- a/style/map.scss
+++ b/style/map.scss
@@ -67,7 +67,7 @@ body {
     flex-grow:1; 
     text-align: center;
     p {
-      margin-top: 40%;
+      margin-top: 50px;
     }
   }
 }
